--- a/1_exploration/Data_Exploration.ipynb
+++ b/1_exploration/Data_Exploration.ipynb
@@ -1,19 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data exploration, 2D and 3D plotting\n",
-    "\n",
-    "*Script for the data exploration to understand the data.*\n",
+    "# Exploratory Data Analysis, 2D and 3D plotting\n",
     "\n",
     "**Aims of the script:**\n",
     "* Load a device-specific dataframe (eg: one csv file containing the data acquired by one device)\n",
@@ -1640,13 +1631,6 @@
     "* The K-mean clustering between parameters (light, CO$_{2}$, temperature or humidity) did not make sense to me: clustering data may work but does not provide any information on the resident activity, but rather between the physical relationships between the parameters.\n",
     "* Therefore I decided to focus on the time series analysis of a single parameter with Prophet, mostly CO$_{2}$, as it is highly correlated with the resident presence."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
