--- a/2_forecasting/Prophet_Prediction.ipynb
+++ b/2_forecasting/Prophet_Prediction.ipynb
@@ -4,16 +4,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/paullo0106/prophet_anomaly_detection/blob/master/prophet_anomaly_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
     "id": "IdO5x8DMJrmm"
    },
    "source": [
@@ -23,27 +13,27 @@
     "\n",
     "**Goal of the script:**\n",
     "\n",
-    "Here, we aim to the detect activity of resident over time, based on the data provided by the smart sensor. Since the CO$_{2}$ level is very well correlated with the presence of a human, we mostly focused on analysing the CO$_{2}$ data.\n",
+    "Here, we aim to the detect activity of resident over time, based on the data provided by the smart sensor. Since the CO2 level is very well correlated with the presence of a human, we mostly focused on analysing the CO2 data.\n",
     "We aim to identify activity such as:\n",
-    "* Someone goes to bed (the CO$_{2}$ level decreases or increases, depending on where is the sensor and stay stable)\n",
+    "* Someone goes to bed (the CO2 level decreases or increases, depending on where is the sensor and stay stable)\n",
     "* Someone wakes up in the morning\n",
-    "* Someone wakes up nightly for a bathroom breaks (the CO$_{2}$ level transiently changes and comes back to baseline)\n",
+    "* Someone wakes up nightly for a bathroom breaks (the CO2 level transiently changes and comes back to baseline)\n",
     "* Unknown activities that nevertheless occur regularly\n",
     "\n",
     "**Motivations to use a forecasting method to detect activity:**\n",
     "\n",
-    "In the notebook Data_Exploration_Guillaume.ipynb, I plotted the data in 2 and 3 dimensions. The limitations were the following:\n",
+    "In the notebook Data_Exploration.ipynb, the data was plotted in 2 and 3 dimensions. The limitations were the following:\n",
     "- 2D plotting could be used to detect transient changes in time series, but the significant changes between day and night baselines make the detection difficult.\n",
-    "- 3D plotting and k-means clustering between three parameters (light, CO$_{2}$, temperature or humidity) might provide information on the physical relationships between the parameters, but not on the activity of the resident.\n",
+    "- 3D plotting and k-means clustering between three parameters (light, CO2, temperature or humidity) might provide information on the physical relationships between the parameters, but not on the activity of the resident.\n",
     "\n",
-    "Since ederly people tends to have the same activity rythm every day (e.g. wakes up, has a walk, goes to bed at the same time of the day), we reasoned that the trend in CO$_{2}$ should be quite similar between days. This seasonality is well handled by the algorith [Prophet](https://facebook.github.io/prophet/) from Facebook, dedicated to perform 'time series forecasting' from seasonal data.\n",
+    "Since ederly people tends to have the same activity rythm every day (e.g. wakes up, has a walk, goes to bed at the same time of the day), we reasoned that the trend in CO2 should be quite similar between days. This seasonality is well handled by the algorith [Prophet](https://facebook.github.io/prophet/) from Facebook, dedicated to perform 'time series forecasting' from seasonal data.\n",
     "\n",
     "![Prophet_figure.png](Prophet_figure.png)\n",
     "**Figure 1: General principle of using a forecasting method to detect a resident activity**\n",
     "\n",
-    "We took advantage of the continuous recording of CO$_{2}$ from Caru’s sensor, to model the activity patterns of resident. The data from the ten last days of recording were used to make a model of the typical activity pattern of the resident. For instance, if the sensor is located in the bedroom of the resident, the model will predict that the CO$_{2}$ will increase and stay stable from the time the resident goes to bed until he wakes up and leaves the bedroom.\n",
+    "We took advantage of the continuous recording of CO2 from the ambient sensor, to model the activity patterns of resident. The data from the ten last days of recording were used to make a model of the typical activity pattern of the resident. For instance, if the sensor is located in the bedroom of the resident, the model will predict that the CO2 will increase and stay stable from the time the resident goes to bed until he wakes up and leaves the bedroom.\n",
     "\n",
-    "A GridSearch function was designed to optimize the model by tuning the hyperparameters. The GridSearch returned a table containing the tested parameters and sorted according to the **Mean Average Percentage Error**. Then the optimized model is used to predict how the activity pattern of today should be. In the **Figure 1**, the predicted pattern from the model is shown in blue. By comparing the predicted results with the latest measurements, we detect how often, and when, a resident exhibits an unpredictable activity. The interpretation of the relationship between predicted and measured CO$_{2}$ level is discussed at the end of the notebook.\n",
+    "A GridSearch function was designed to optimize the model by tuning the hyperparameters. The GridSearch returned a table containing the tested parameters and sorted according to the **Mean Average Percentage Error**. Then the optimized model is used to predict how the activity pattern of today should be. In the **Figure 1**, the predicted pattern from the model is shown in blue. By comparing the predicted results with the latest measurements, we detect how often, and when, a resident exhibits an unpredictable activity. The interpretation of the relationship between predicted and measured CO2 level is discussed at the end of the notebook.\n",
     "\n",
     "\n",
     "**Structure of the script:**\n",
@@ -237,11 +227,11 @@
     "**Note on the dataframe**\n",
     "- To speed up the processing, this script was designed to work with a device-specific dataframe that should be located in the folder ../data/interim. The user enters the number of the device in a two-digit string format ('01', '02'... '51') and follows the instructions.\n",
     "- If the device-specific dataframes do not exist yet, it will be automatically generated. This script expects to find the following files in the folder ../Data/raw:'\n",
-    "        * 20200331_propulsionlab_caru_data_part1.csv\n",
-    "        * 20200331_propulsionlab_caru_data_part2.csv\n",
-    "        * 20200331_propulsionlab_caru_data_part3.csv\n",
-    "        * 20200331_propulsionlab_caru_data_part4.csv\n",
-    "        * 20200331_propulsionlab_caru_data_part5.csv"
+    "        * raw_data_part1.csv\n",
+    "        * raw_data_part2.csv\n",
+    "        * raw_data_part3.csv\n",
+    "        * raw_data_part4.csv\n",
+    "        * raw_data_part5.csv"
    ]
   },
   {
@@ -254,7 +244,7 @@
     "### Possibility 1: Load data from the Amazon S3 bucket:\n",
     "\n",
     "This is a function to be able to use a cloud to store data such as AWS. Here is the\n",
-    "[link to the caru bucket on Amazon](https://s3.console.aws.amazon.com/s3/buckets/carudata/?region=eu-north-1&tab=overview) *(credentials required)*"
+    "[link to the company bucket on Amazon](removed_link) *(credentials required)*"
    ]
   },
   {
@@ -270,7 +260,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "path = 's3://carudata/interim/device04_alldays.csv'"
+    "path = 's3://company/interim/device04_alldays.csv'"
    ]
   },
   {
@@ -7549,12 +7539,12 @@
    "source": [
     "## Conclusions and working directions:\n",
     "\n",
-    "* Prophet is a time series forecasting method method that can be used to predict the CO$_{2}$ level over time.\n",
+    "* Prophet is a time series forecasting method method that can be used to predict the CO2 level over time.\n",
     "* The comparison between the predicted and recorded data can be interpreted as follows:\n",
-    "    - **If the recorded data match the predicted CO$_{2}$ level over time**: the resident exhibits most likely a normal daily activity. There is no reason to specifically check this person.\n",
-    "    - **If the recorded data differs from the predicted CO$_{2}$ level over time**:\n",
+    "    - **If the recorded data match the predicted CO2 level over time**: the resident exhibits most likely a normal daily activity. There is no reason to specifically check this person.\n",
+    "    - **If the recorded data differs from the predicted CO2 level over time**:\n",
     "        - *If the difference lasts for several hours*: the resident does not have the typical activity. It may be worth to check if the resident need help. *See example on the left figure below*.\n",
-    "        - *If there are short transient deviations from the predicted CO$_{2}$ level*: most likely, the transient deviations are not predicted because they are too small in duration, or happening at variable time points every day (ex: nightly bathroom break ), but could be a normal activity of the resident. In this case, it may be worth implementing an additional function to count the number of transients:\n",
+    "        - *If there are short transient deviations from the predicted CO2 level*: most likely, the transient deviations are not predicted because they are too small in duration, or happening at variable time points every day (ex: nightly bathroom break ), but could be a normal activity of the resident. In this case, it may be worth implementing an additional function to count the number of transients:\n",
     "            - If the number of transient is not significantly different from the usual number of transients, it is not necessary to check the person.\n",
     "            - If the number of transient is significantly different from the usual number of transients, it may be worth to check the person. *See example on the right figure below*.\n",
     "* It may be worth to run, for each day to predict, a GridSearch using different training periods (8, 10, or more days), since it has a great impact on the prediction quality.\n",
@@ -7569,9 +7559,9 @@
     "    - Use more parameters for prophet by following this [tutorial](https://towardsdatascience.com/implementing-facebook-prophet-efficiently-c241305405a3). In praticular, the weekdays can be taken in account, with a potential drawback on the computational cost of prediction.\n",
     "    - Optimize the hyperparameter tuning: Implement a RandomSearch or a function that run a new GridSearch using the best parameters found in the previous GridSearch.\n",
     "    - Use a different forecasting method such as the [Seasonal ARIMA](https://medium.com/analytics-vidhya/sarima-forecasting-seasonal-data-with-python-and-r-2e7472dfad83).\n",
-    "- Quantify the frequency and area of short-term deviations from the predicted CO$_{2}$ level:\n",
+    "- Quantify the frequency and area of short-term deviations from the predicted CO2 level:\n",
     "    - Measure the mean frequency and mean area under the curve.\n",
-    "    - Set an alert when the short-term deviations from the predicted CO$_{2}$ level are significantly different in frequency and area between the last day and the training period."
+    "    - Set an alert when the short-term deviations from the predicted CO2 level are significantly different in frequency and area between the last day and the training period."
    ]
   },
   {
