--- a/2_forecasting_GridSearch/Prophet_Prediction_GridSearch.ipynb
+++ b/2_forecasting_GridSearch/Prophet_Prediction_GridSearch.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Here, we aim to the detect activity of resident over time, defined pattern as a **transient**, reversible and significant change in one single parameter(s).\n",
     "Examples of patterns:\n",
-    "* Someone goes to bed (CO$_{2}$ decreases or increases and stay stable)\n",
+    "* Someone goes to bed (CO2 decreases or increases and stay stable)\n",
     "* Someone wakes up in the morning\n",
     "* Someone wakes up nightly for a bathroom breaks\n",
     "* Unknown activities that nevertheless occur regularly\n",
@@ -34,13 +34,13 @@
     "\n",
     "In the notebook Data_Exploration_Guillaume.ipynb, I plotted the data in 2 and 3 dimensions. The limitations were the following:\n",
     "- 2D plotting could be used to detect transient changes in time series, but the significant changes between day and night baselines make the detection difficult.\n",
-    "- 3D plotting and k-means clustering between three parameters (light, CO$_{2}$, temperature or humidity) might provide information on the physical relationships between the parameters, but not on the activity of the resident.\n",
+    "- 3D plotting and k-means clustering between three parameters (light, CO2, temperature or humidity) might provide information on the physical relationships between the parameters, but not on the activity of the resident.\n",
     "\n",
-    "Since ederly people tends to have the same rythm every day (e.g. wakes up, has a walk, goes to bed at the same time of the day), we reasoned that the trend in CO$_{2}$ should be quite similar between days or weekdays. This seasonality is well handled by the algorith [Prophet](https://facebook.github.io/prophet/) from Facebook, dedicated to perform 'time series forecasting' from seasonal data.\n",
+    "Since ederly people tends to have the same rythm every day (e.g. wakes up, has a walk, goes to bed at the same time of the day), we reasoned that the trend in CO2 should be quite similar between days or weekdays. This seasonality is well handled by the algorith [Prophet](https://facebook.github.io/prophet/) from Facebook, dedicated to perform 'time series forecasting' from seasonal data.\n",
     "\n",
     "![Prophet_figure.png](Prophet_figure.png)\n",
     "\n",
-    "We took advantage of the continuous recording of CO$_{2}$ from the ambient sensor, to model the activity patterns of resident. The data from the ten last days of recording were used to make a model of the typical activity pattern of the resident. For instance, if the sensor is located in the bedroom of the resident, the model will predict that the CO$_{2}$ will increase and stay stable from the time the resident goes to bed until he wakes up and leaves the bedroom.\n",
+    "We took advantage of the continuous recording of CO2 from the ambient sensor, to model the activity patterns of resident. The data from the ten last days of recording were used to make a model of the typical activity pattern of the resident. For instance, if the sensor is located in the bedroom of the resident, the model will predict that the CO2 will increase and stay stable from the time the resident goes to bed until he wakes up and leaves the bedroom.\n",
     "\n",
     "A GridSearch function was designed to optimize the model by tuning the hyperparameters. The GridSearch returned a table containing the tested parameters and sorted according to the **Mean Average Percentage Error**. Then the optimized model is used to predict how the activity pattern of today should be. The predicted pattern from the model is shown in blue. By comparing the predicted results with the latest measurements, we detect how often, and when, a resident had an unusual activity. Unusual activity is detected in red in the graph.\n",
     "\n",
@@ -12952,448 +12952,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "scrolled": true
-   },
-   "source": [
-    "# Create a dataframe with the date to use\n",
-    "\n",
-    "dates = pd.DataFrame(columns={'date_minus_12',\n",
-    "                              'date_minus_10',\n",
-    "                              'date_minus_8',\n",
-    "                              'date_predict'})\n",
-    "dates = dates[['date_minus_12', 'date_minus_10', 'date_minus_8', 'date_predict']]\n",
-    "\n",
-    "# List of unique dates in the dataframe\n",
-    "dates['date_minus_12'] = df_dev['ds'].unique().strftime('%Y-%m-%d')\n",
-    "dates = dates.drop_duplicates(subset=['date_minus_12'])\n",
-    "dates = dates.reset_index(drop=True)\n",
-    "\n",
-    "# Fill the other columns and drop the 12 last columns\n",
-    "dates['date_minus_10'] = dates.iloc[2:, 0].reset_index(drop=True)\n",
-    "dates['date_minus_8'] = dates.iloc[4:, 0].reset_index(drop=True)\n",
-    "dates['date_predict'] = dates.iloc[12:, 0].reset_index(drop=True)\n",
-    "dates = dates[:-12] # Drop the 12 last rows\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "print(dates)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "scrolled": true
-   },
-   "source": [
-    "# date_predict being the column of unique values in df_dev, I verify that the calculated date_minus_12\n",
-    "# date_minus_10 and date_minus_8 are existing in the dataframe\n",
-    "\n",
-    "dates['Do_It'] = 'Do not'\n",
-    "dates['dm_12_c'] = np.nan\n",
-    "\n",
-    "for r in range(dates.shape[0]):\n",
-    "    date_predict = dates.iloc[r, 3]\n",
-    "    date_predict = datetime.strptime(date_predict, \"%Y-%m-%d\")\n",
-    "    \n",
-    "    pred_duration = 12 # 12-day prediction\n",
-    "    date_minus_12_check = date_predict + timedelta(days=-pred_duration)\n",
-    "    date_minus_12_check = datetime.strftime(date_minus_12_check, \"%Y-%m-%d\")\n",
-    "#     dates.iloc[r, 5] = date_minus_12_check\n",
-    "\n",
-    "    if date_minus_12_check in dates.date_predict.values or r<=11:\n",
-    "        dates.iloc[r, 4] = 'yes'\n",
-    "    \n",
-    "pd.set_option('display.max_rows', None)\n",
-    "print(dates)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# GridSearch over one dataset:\n",
-    "\n",
-    "start_time = time.time()\n",
-    "mape_table_full = pd.DataFrame()\n",
-    "\n",
-    "for r in range(dates.shape[0]):\n",
-    "    # Parameters\n",
-    "    prophet_grid = {'df_dev' : [df_dev],\n",
-    "                    'device' : [device],\n",
-    "                    'parameter' : ['co2'],\n",
-    "                    'begin' : dates.iloc[r, :3].tolist(),\n",
-    "                    'end' : [dates.iloc[r, 3]],\n",
-    "                    'sampling_period_min' : [1],\n",
-    "                    'graph' : [1],\n",
-    "                    'predict_day' : [1],\n",
-    "                    'interval_width' : [0.6],\n",
-    "                    'changepoint_prior_scale' : [0.01, 0.005], # list(np.arange(0.01,30,1).tolist()),\n",
-    "                    'daily_fo' : [3, 9],\n",
-    "    #                 'holidays_prior_scale' : list((1000,100,10,1,0.1)),\n",
-    "                   }\n",
-    "\n",
-    "    # Run GridSearch_Prophet\n",
-    "    mape_table = GridSearch_Prophet(list(ParameterGrid(prophet_grid)), metric='mape')\n",
-    "    mape_table_full = mape_table_full.append(mape_table)\n",
-    "\n",
-    "    end_time = time.time()\n",
-    "    dur_min = int((end_time - start_time)/60)\n",
-    "\n",
-    "    print('Time elapsed: '+ str(dur_min) + \" minutes.\")\n",
-    "    \n",
-    "    # Save the best model\n",
-    "    print('Saving the best model')\n",
-    "\n",
-    "    best_model = {'df_dev' : [df_dev],\n",
-    "                    'device' : [mape_table.iloc[0, 0]],\n",
-    "                    'parameter' : [mape_table.iloc[0, 1]],\n",
-    "                    'begin' : [mape_table.iloc[0, 2]],\n",
-    "                    'end' : [mape_table.iloc[0, 3]],\n",
-    "                    'sampling_period_min' : [mape_table.iloc[0, 4]],\n",
-    "                    'graph' : [1],\n",
-    "                    'predict_day' : [1],\n",
-    "                    'interval_width' : [mape_table.iloc[0, 5]],\n",
-    "                    'changepoint_prior_scale' : [mape_table.iloc[0, 7]], # list(np.arange(0.01,30,1).tolist()),\n",
-    "                    'daily_fo' : [mape_table.iloc[0, 6]],\n",
-    "    #                 'holidays_prior_scale' : list((1000,100,10,1,0.1)),\n",
-    "                   }\n",
-    "\n",
-    "    # Run GridSearch_Prophet on the p\n",
-    "    mape_table = GridSearch_Prophet(list(ParameterGrid(best_model)), metric='mape')\n",
-    "\n",
-    "    end_time = time.time()\n",
-    "    dur_min = int((end_time - start_time)/60)\n",
-    "    print('Full analysis completed in '+ str(dur_min) + ' minutes.')\n",
-    "    \n",
-    "# Save the full table of mape_table\n",
-    "# Store the complete mape_table if this is the last prediction\n",
-    "folder_name = '/Users/guillaume/Documents/DS2020/Caru/caru/data/processed/'\n",
-    "mape_table_name = folder_name + re.sub(\"[']\", '', str(mape_table.iloc[0, 0])) + '_mape_table_full.csv'\n",
-    "mape_table_full.to_csv(mape_table_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# Backup\n",
-    "for dev_nb in range(1,52):\n",
-    "    device_nb = str('{:02d}'.format(dev_nb))\n",
-    "    # Load the device-specific dataframe.\n",
-    "    assert isinstance(device_nb, str) and len(device_nb)==2 and sum(d.isdigit() for d in device_nb)==2, 'WARNING: device_nb must be a string of 2-digits!'\n",
-    "    assert int(device_nb)>=1 and int(device_nb)<=51, 'This device does not belong to the dataframe'\n",
-    "    device, df_dev = load_ds(device_nb)\n",
-    "    # Convert the variable device from a np.array to a string\n",
-    "    regex = re.compile('[^A-Za-z0-9]')\n",
-    "    device = regex.sub('', str(device))\n",
-    "    \n",
-    "    # Create a dataframe with the date to use\n",
-    "    dates = pd.DataFrame(columns={'date_minus_12',\n",
-    "                                  'date_minus_10',\n",
-    "                                  'date_minus_8',\n",
-    "                                  'date_predict'})\n",
-    "    dates = dates[['date_minus_12', 'date_minus_10', 'date_minus_8', 'date_predict']]\n",
-    "    # List of unique dates in the dataframe\n",
-    "    dates['date_minus_12'] = df_dev['ds'].unique().strftime('%Y-%m-%d')\n",
-    "    dates = dates.drop_duplicates(subset=['date_minus_12'])\n",
-    "    dates = dates.reset_index(drop=True)\n",
-    "    # Fill the other columns and drop the 12 last columns\n",
-    "    dates['date_minus_10'] = dates.iloc[2:, 0].reset_index(drop=True)\n",
-    "    dates['date_minus_8'] = dates.iloc[4:, 0].reset_index(drop=True)\n",
-    "    dates['date_predict'] = dates.iloc[12:, 0].reset_index(drop=True)\n",
-    "    dates = dates[:-12] # Drop the 12 last rows\n",
-    "    \n",
-    "    # GridSearch over dataset:\n",
-    "    start_time = time.time()\n",
-    "    mape_table_full = pd.DataFrame()\n",
-    "\n",
-    "    for r in range(dates.shape[0]):\n",
-    "        # Parameters\n",
-    "        prophet_grid = {'df_dev' : [df_dev],\n",
-    "                        'device' : [device],\n",
-    "                        'parameter' : ['co2'],\n",
-    "                        'begin' : dates.iloc[r, :3].tolist(),\n",
-    "                        'end' : [dates.iloc[r, 3]],\n",
-    "                        'sampling_period_min' : [1],\n",
-    "                        'graph' : [1],\n",
-    "                        'predict_day' : [1],\n",
-    "                        'interval_width' : [0.6],\n",
-    "                        'changepoint_prior_scale' : [0.01, 0.005], # list(np.arange(0.01,30,1).tolist()),\n",
-    "                        'daily_fo' : [3, 9],\n",
-    "        #                 'holidays_prior_scale' : list((1000,100,10,1,0.1)),\n",
-    "                       }\n",
-    "\n",
-    "        # Run GridSearch_Prophet\n",
-    "        mape_table = GridSearch_Prophet(list(ParameterGrid(prophet_grid)), metric='mape')\n",
-    "        mape_table_full = mape_table_full.append(mape_table)\n",
-    "\n",
-    "        end_time = time.time()\n",
-    "        dur_min = int((end_time - start_time)/60)\n",
-    "\n",
-    "        print('Time elapsed: '+ str(dur_min) + \" minutes.\")\n",
-    "\n",
-    "        # Save the best model\n",
-    "        print('Saving the best model')\n",
-    "\n",
-    "        best_model = {'df_dev' : [df_dev],\n",
-    "                        'device' : [mape_table.iloc[0, 0]],\n",
-    "                        'parameter' : [mape_table.iloc[0, 1]],\n",
-    "                        'begin' : [mape_table.iloc[0, 2]],\n",
-    "                        'end' : [mape_table.iloc[0, 3]],\n",
-    "                        'sampling_period_min' : [mape_table.iloc[0, 4]],\n",
-    "                        'graph' : [1],\n",
-    "                        'predict_day' : [1],\n",
-    "                        'interval_width' : [mape_table.iloc[0, 5]],\n",
-    "                        'changepoint_prior_scale' : [mape_table.iloc[0, 7]], # list(np.arange(0.01,30,1).tolist()),\n",
-    "                        'daily_fo' : [mape_table.iloc[0, 6]],\n",
-    "        #                 'holidays_prior_scale' : list((1000,100,10,1,0.1)),\n",
-    "                       }\n",
-    "\n",
-    "        # Run GridSearch_Prophet on the p\n",
-    "        mape_table = GridSearch_Prophet(list(ParameterGrid(best_model)), metric='mape')\n",
-    "\n",
-    "        end_time = time.time()\n",
-    "        dur_min = int((end_time - start_time)/60)\n",
-    "        print('Full analysis completed in '+ str(dur_min) + ' minutes.')\n",
-    "\n",
-    "    # Save the full table of mape_table\n",
-    "    # Store the complete mape_table if this is the last prediction\n",
-    "    folder_name = '/Users/guillaume/Documents/DS2020/Caru/caru/data/processed/'\n",
-    "    mape_table_name = folder_name + re.sub(\"[']\", '', str(mape_table.iloc[0, 0])) + '_mape_table_full.csv'\n",
-    "    mape_table_full.to_csv(mape_table_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# GridSearch over dataset:\n",
-    "\n",
-    "start_time = time.time()\n",
-    "\n",
-    "# Parameters\n",
-    "prophet_grid = {'df_dev' : [df_dev],\n",
-    "                'device' : [device],\n",
-    "                'parameter' : ['co2'],\n",
-    "                'begin' : ['2019-03-20', '2019-03-22'],\n",
-    "                'end' : ['2019-04-01'],\n",
-    "                'sampling_period_min' : [1],\n",
-    "                'graph' : [1],\n",
-    "                'predict_day' : [1],\n",
-    "                'interval_width' : [0.6],\n",
-    "                'changepoint_prior_scale' : [0.01], # list(np.arange(0.01,30,1).tolist()),\n",
-    "                'daily_fo' : [3, 6, 9],\n",
-    "#                 'holidays_prior_scale' : list((1000,100,10,1,0.1)),\n",
-    "               }\n",
-    "\n",
-    "# Run GridSearch_Prophet\n",
-    "mape_table = GridSearch_Prophet(list(ParameterGrid(prophet_grid)), metric='mape')\n",
-    "\n",
-    "\n",
-    "end_time = time.time()\n",
-    "dur_min = int((end_time - start_time)/60)\n",
-    "\n",
-    "print('GridSearch finished '+ str(dur_min) + \" minutes.\")\n",
-    "print('Saving the best model')\n",
-    "\n",
-    "best_model = {'df_dev' : [df_dev],\n",
-    "                'device' : [mape_table.iloc[0, 0]],\n",
-    "                'parameter' : [mape_table.iloc[0, 1]],\n",
-    "                'begin' : [mape_table.iloc[0, 2]],\n",
-    "                'end' : [mape_table.iloc[0, 3]],\n",
-    "                'sampling_period_min' : [mape_table.iloc[0, 4]],\n",
-    "                'graph' : [1],\n",
-    "                'predict_day' : [1],\n",
-    "                'interval_width' : [mape_table.iloc[0, 5]],\n",
-    "                'changepoint_prior_scale' : [mape_table.iloc[0, 7]], # list(np.arange(0.01,30,1).tolist()),\n",
-    "                'daily_fo' : [mape_table.iloc[0, 6]],\n",
-    "#                 'holidays_prior_scale' : list((1000,100,10,1,0.1)),\n",
-    "               }\n",
-    "\n",
-    "# Run GridSearch_Prophet on the p\n",
-    "mape_table = GridSearch_Prophet(list(ParameterGrid(best_model)), metric='mape')\n",
-    "\n",
-    "end_time = time.time()\n",
-    "dur_min = int((end_time - start_time)/60)\n",
-    "print('Best model saved in '+ str(dur_min) + ' minutes.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Time series dataset available: https://www.kaggle.com/robikscube/hourly-energy-consumption"
-   ]
   }
  ],
  "metadata": {
@@ -13418,7 +12976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
